--- a/Leqi_extra_assignment_1/leqi_extra_assignment.html
+++ b/Leqi_extra_assignment_1/leqi_extra_assignment.html
@@ -9,19 +9,16 @@
 
 
 </head>
-
   <body>
-
     <main>
-      <button id="backgroundcolor">Button 1</button>
-      <button id="fontcolor">Button 2</button>
-        <p> ABCDEFG </p>
-      <button id="fontfamily">Button 3</button>
-        <p id="replace"> HIJKLMN </p>
-      <button id="replace">Button 4</button>
-      <button id="alert">Button 5</button>
+      <div>
+        <button id="backgroundcolor">Button 1 backgroundcolor</button>
+        <button id="fontcolor">Button 2 fontcolor</button>
+        <button id="fontfamily">Button 3 fontfamily</button>
+        <button id="replacement-button">Button 4 replacement</button>
+        <button id="alert">Button 5 alert</button>
+      </div>
+    <p id="replacement"> ABCDEFG </p>
     </main>
-
   </body>
-
 </html>
