--- a/Leqi_extra_assignment_1/leqi_extra_assignment.html
+++ b/Leqi_extra_assignment_1/leqi_extra_assignment.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Leqi Zhong Extra Credit Exercises 1</title>
   <meta name="description" content="Examples of layouts">
-  <script defer src="./assets/main.js"></script>
+    <style>
+    body {
 
-
+    }
+  </style>
+  <script defer src="./main.js"></script>
 </head>
   <body>
     <main>
