--- a/Leqi_extra_assignment_1/leqi_extra_assignment.html
+++ b/Leqi_extra_assignment_1/leqi_extra_assignment.html
@@ -5,23 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Leqi Zhong Extra Credit Exercises 1</title>
   <meta name="description" content="Examples of layouts">
-    <style>
-    body {
+  <script defer src="./assets/main.js"></script>
 
-    }
-  </style>
-  <script defer src="./main.js"></script>
+
 </head>
+
   <body>
+
     <main>
-      <div>
-        <button id="backgroundcolor">Button 1 backgroundcolor</button>
-        <button id="fontcolor">Button 2 fontcolor</button>
-        <button id="fontfamily">Button 3 fontfamily</button>
-        <button id="replacement-button">Button 4 replacement</button>
-        <button id="alert">Button 5 alert</button>
-      </div>
-    <p id="replacement"> ABCDEFG </p>
+      <button id="backgroundcolor">Button 1</button>
+      <button id="fontcolor">Button 2</button>
+        <p> ABCDEFG </p>
+      <button id="fontfamily">Button 3</button>
+        <p id="replace"> HIJKLMN </p>
+      <button id="replace">Button 4</button>
+      <button id="alert">Button 5</button>
     </main>
+
   </body>
+
 </html>
