--- a/leqizhong_final_resubmit/home.html
+++ b/leqizhong_final_resubmit/home.html
@@ -68,7 +68,7 @@
           <div class=blank></div>
 
           <div class="highlights">
-            <img src="./assets/foodtruck16.JPG" alt="boats in Berkeley Marina">
+            <img src="./assets/foodtruck16.JPG" alt="foodtrucks">
             <div class="boxOverlay">
               <a href="foodtruck.html">
                 <div class="textOverlay">A food trucks village for the Berkeley Marina?</div>
