--- a/leqizhong_final_reresubmit/resume.html
+++ b/leqizhong_final_reresubmit/resume.html
@@ -40,8 +40,13 @@
           <div class=blank></div>
           <h2>Experience</h2>
           <div class="line"></div>
-          <h3>NBC News, Summer Internship, June – August 2022</h3>
-          <p class="resumefont">✧ Incoming intern at Business, Technology & Innovation Unit.</p>
+          <h3>CNBC, Fall Intern, September - December 2022</h3>
+          <p class="resumefont">✧ CNBC San Francisco branch incoming intern.</p>
+          <div class=blank1></div>
+          <h3>NBC News, Business, Tech & Innovation Unit Summer Intern, June – August 2022</h3>
+          <p class="resumefont">✧ Pitching, finding characters, and doing pre-interviews for TV news packages related to personal finance, such as inflation, holiday shopping and consumer behaviors.</p>
+          <p class="resumefont">✧ Gathering sources and attending listed companies' earnings calls, updating NBC News' internal news alert systems.</p>
+          <p class="resumefont">✧ Handling the Unit's social media accounts, tracking and analyzing viewership.</p>
           <div class=blank1></div>
           <h3>PRI’s The World Radio Program, Intern, October 2020 – July 2021</h3>
           <p class="resumefont">✧ Conducted interviews and organized materials with PRI’s China correspondent. Completed 37 projects appearing on print, radio, podcasting and TV broadcast including The World (PRI); <i>International Weekly</i> (Nature); and <i>Plastic News</i>.</p>
