--- a/leqizhong_final_reresubmit/resume.html
+++ b/leqizhong_final_reresubmit/resume.html
@@ -40,13 +40,15 @@
           <div class=blank></div>
           <h2>Experience</h2>
           <div class="line"></div>
-          <h3>CNBC, Fall Intern, September - December 2022</h3>
-          <p class="resumefont">✧ CNBC San Francisco branch incoming intern.</p>
+          <h3>CNBC, San Francisco Bureau Intern, September - December 2022</h3>
+          <p class="resumefont">✧ Writing scripts for the daily Techcheck Briefing.</p>
+          <p class="resumefont">✧ Pitching, conducting research, and assisting on set for taping TV news regarding the stock market, tech companies, currencies and businesses.</p>
+          <p class="resumefont">✧ Creating graphics and logging tapes in the iNews system.</p>
           <div class=blank1></div>
           <h3>NBC News, Business, Tech & Innovation Unit Summer Intern, June – August 2022</h3>
-          <p class="resumefont">✧ Pitching, finding characters, and doing pre-interviews for TV news packages related to personal finance, such as inflation, holiday shopping and consumer behaviors.</p>
-          <p class="resumefont">✧ Gathering sources and attending listed companies' earnings calls, updating NBC News' internal news alert systems.</p>
-          <p class="resumefont">✧ Handling the Unit's social media accounts, tracking and analyzing viewership.</p>
+          <p class="resumefont">✧ Prepared pitches, searched for characters, and conducted pre-interviews for TV news packages related to personal finance, especially topics in inflation, holiday shopping, and consumer behaviors.</p>
+          <p class="resumefont">✧ Tracked and took notes on listed companies' earnings calls, and monitored NBC News' internal news alert systems.</p>
+          <p class="resumefont">✧ Handled the Unit's social media accounts, and analyzed the viewership.</p>
           <div class=blank1></div>
           <h3>PRI’s The World Radio Program, Intern, October 2020 – July 2021</h3>
           <p class="resumefont">✧ Conducted interviews and organized materials with PRI’s China correspondent. Completed 37 projects appearing on print, radio, podcasting and TV broadcast including The World (PRI); <i>International Weekly</i> (Nature); and <i>Plastic News</i>.</p>
@@ -86,8 +88,8 @@
           <div class="line"></div>
           <h3>Languages</h3>
           <p class="resumefont">Cantonese (native), Mandarin (native), English (fluent)</p>
-          <h3>Softwares</h3>
-          <p class="resumefont">Audition, Figma, HTML, Power Bi, Dreamweaver, Photoshop, Premiere Pro</p>
+          <h3>Skills</h3>
+          <p class="resumefont">iNews, Aerial Photography, Python, HTML Coding, CSS, Java Script, Data Wrapper, Tableau, Power Bi, Figma, Audition, After Effects, Premiere Pro, Photoshop, Dreamweaver</p>
         </div>
       </div>
     </div>
