1108 personal website update

--- a/leqizhong_final_reresubmit/home.html
+++ b/leqizhong_final_reresubmit/home.html
@@ -44,6 +44,18 @@
           </header>
 
           <div class="highlights">
+            <img src="./assets/parkinglot.jpg" alt="Hs Lordship parking lot">
+            <div class="boxOverlay">
+              <a href=https://www.berkeleyside.org/2022/10/24/berkeley-marina-food-trucks-hs-lordships>
+                <div class="textOverlay">Berkeley is ‘making progress’ on Marina food truck village</div>
+              </a>
+            </div>
+          </div>
+
+          <div class=blank></div>
+          <div class=blank></div>
+
+          <div class="highlights">
             <img src="./assets/crabseason1.jpg" alt="crabbing traps">
             <div class="boxOverlay">
               <a href="crabseason.html">
