--- a/leqizhong_final_reresubmit/portfolio.html
+++ b/leqizhong_final_reresubmit/portfolio.html
@@ -30,6 +30,18 @@
         </div>
 
         <div class="col-5">
+          <a href=https://www.berkeleyside.org/2022/10/24/berkeley-marina-food-trucks-hs-lordships><img src="./assets/parkinglot.jpg" alt="Hs Lordship restaurant"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://www.berkeleyside.org/2022/10/24/berkeley-marina-food-trucks-hs-lordships>Berkeley is ‘making progress’ on Marina food truck village</a></h2>
+          <h3>October 24, 2022</h3>
+          <p class="description">Berkeley can’t find a restaurant for the vast Hs Lordships space, so food trucks in its parking lot might be the next best thing.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href="boating.html"><img src="./assets/boating.jpg" alt="boats in Berkeley Marina"></a>
         </div>
         <div class="col-7">
