1205 tree planting article updated
1205 tree planting article updated

--- a/leqizhong_final_reresubmit/home.html
+++ b/leqizhong_final_reresubmit/home.html
@@ -44,6 +44,18 @@
           </header>
 
           <div class="highlights">
+            <img src="./assets/treeplanting.jpg" alt="people planting trees">
+            <div class="boxOverlay">
+              <a href=https://richmondconfidential.org/2022/12/03/richmond-verde-elementary-school-tree-planting/>
+                <div class="textOverlay">‘It’s just a beautiful experience’: Community groups plant trees to make Verde school greener</div>
+              </a>
+            </div>
+          </div>
+
+          <div class=blank></div>
+          <div class=blank></div>
+
+          <div class="highlights">
             <img src="./assets/parkinglot.jpg" alt="Hs Lordship parking lot">
             <div class="boxOverlay">
               <a href=https://www.berkeleyside.org/2022/10/24/berkeley-marina-food-trucks-hs-lordships>
