--- a/leqizhong_final_reresubmit/portfolio.html
+++ b/leqizhong_final_reresubmit/portfolio.html
@@ -30,6 +30,18 @@
         </div>
 
         <div class="col-5">
+          <a href=https://richmondconfidential.org/2022/12/03/richmond-verde-elementary-school-tree-planting/><img src="./assets/treeplanting.jpg" alt="people planting trees"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://richmondconfidential.org/2022/12/03/richmond-verde-elementary-school-tree-planting/>‘It’s just a beautiful experience’: Community groups plant trees to make Verde school greener</a></h2>
+          <h3>December 3, 2022</h3>
+          <p class="description">For years, even on hot mornings and afternoons, Verde Elementary School students have spent heir recess and physical education periods on a cracked and sun-drenched blacktop — a wide open space with colored lines drawing volleyball courts and soccer fields, a running track along the edge.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href=https://www.berkeleyside.org/2022/10/24/berkeley-marina-food-trucks-hs-lordships><img src="./assets/parkinglot.jpg" alt="Hs Lordship restaurant"></a>
         </div>
         <div class="col-7">
