--- a/leqizhong_final_reresubmit/portfolio.html
+++ b/leqizhong_final_reresubmit/portfolio.html
@@ -30,6 +30,30 @@
         </div>
 
         <div class="col-5">
+          <a href=https://oaklandnorth.net/2023/02/06/oakland-lantern-festival-chinatown-businesses/><img src="./assets/lantern.jpg" alt="sea of lantern at Chinatown, Oakland"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://oaklandnorth.net/2023/02/06/oakland-lantern-festival-chinatown-businesses/>Lantern Festival lures many back to Oakland’s Chinatown</a></h2>
+          <h3>February 6, 2023</h3>
+          <p class="description">Oakland’s Chinatown was transformed Sunday into a vibrant street market, where the aroma of cooking food mingled with the crackle of conversation and the bright colors of balloons and paper lanterns. Beneath a canopy of floating red lanterns, vendors hawked rib and radish soup, boba tea, and pineapple buns.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
+          <a href="energycharts.html"><img src="./assets/energy1.jpg" alt="energy pollution"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href="energycharts.html">DATA VISUALIZATION: How far are we from a low-carbon power system?</a></h2>
+          <h3>Janurary 30, 2023</h3>
+          <p class="description">Despite producing more and more energy from renewables each year, we continue to burn more combustible fuels. The following interactive charts show the energy production mix from 1990 to 2019. We will explore how energy production varies across the world, how it changes over time, and whether we are making progress in shifting towards a low-carbon energy system.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href=https://richmondconfidential.org/2022/12/03/richmond-verde-elementary-school-tree-planting/><img src="./assets/treeplanting.jpg" alt="people planting trees"></a>
         </div>
         <div class="col-7">
