--- a/leqizhong_final_reresubmit/resume.html
+++ b/leqizhong_final_reresubmit/resume.html
@@ -33,6 +33,8 @@
           <div class="line"></div>
           <h3>University of California, Berkeley</h3>
           <p class="resumefont">Master of Journalism, 2021 - 2023</p>
+          <h3>Stanford University</h3>
+          <p class="resumefont">Exchange Program, 2023</p>
           <h3>Guangdong University of Finance and Economics</h3>
           <p class="resumefont">Bachelor of Arts in Multimedia, 2016 - 2020</p>
           <h3>University of California, Berkeley</h3>
@@ -41,17 +43,18 @@
           <h2>Experience</h2>
           <div class="line"></div>
           <h3>CNBC, San Francisco Bureau Intern, September - December 2022</h3>
-          <p class="resumefont">✧ Writing scripts for the daily Techcheck Briefing.</p>
-          <p class="resumefont">✧ Pitching, conducting research, and assisting on set for taping TV news regarding the stock market, tech companies, currencies and businesses.</p>
-          <p class="resumefont">✧ Creating graphics and logging tapes in the iNews system.</p>
+          <p class="resumefont">✧ Wrote 5-minute-long scripts for TechCheck Briefings, a daily briefing on Bay Area tech firms and new products.</p>
+          <p class="resumefont">✧ Identified and researched business and tech stories and assisted producers and anchors on set during live news broadcasts regarding tech, stock market, Crypto currencies, and broader business topics.</p>
+          <p class="resumefont">✧ Created graphics and logged tapes using the iNEWS system.</p>
           <div class=blank1></div>
           <h3>NBC News, Business, Tech & Innovation Unit Summer Intern, June – August 2022</h3>
-          <p class="resumefont">✧ Prepared pitches, searched for characters, and conducted pre-interviews for TV news packages related to personal finance, especially topics in inflation, holiday shopping, and consumer behaviors.</p>
-          <p class="resumefont">✧ Tracked and took notes on listed companies' earnings calls, and monitored NBC News' internal news alert systems.</p>
-          <p class="resumefont">✧ Handled the Unit's social media accounts, and analyzed the viewership.</p>
+          <p class="resumefont">✧ Prepared pitches, searched for sources, and conducted pre-interviews for TV news packages related to personal finance.</p>
+          <p class="resumefont">✧ Tracked, documented, and filed companies' earnings calls into NBC News' internal news alert systems.</p>
+          <p class="resumefont">✧ Monitored and posted content for the Unit's social media accounts, and compiled weekly audience engagement reports.</p>
           <div class=blank1></div>
           <h3>PRI’s The World Radio Program, Intern, October 2020 – July 2021</h3>
-          <p class="resumefont">✧ Conducted interviews and organized materials with PRI’s China correspondent. Completed 37 projects appearing on print, radio, podcasting and TV broadcast including The World (PRI); <i>International Weekly</i> (Nature); and <i>Plastic News</i>.</p>
+          <p class="resumefont">✧ Conducted interviews, organized tapes, cleaned recordings for PRI China correspondents producing audio stories.</p>
+          <p class="resumefont">✧ Completed 37 projects appearing on print, radio, podcasting and TV broadcast including The World (PRI); <i>International Weekly</i> (Nature); and <i>Plastic News</i>.</p>
           <div class=blank1></div>
           <h3>Caixin, Environment and Science Team Intern Reporter, December 2020 – April 2021</h3>
           <p class="resumefont">✧ Wrote 14 articles about science, climate, and pollution for <a href=https://search.caixin.com/newsearch/search?keyword=%E9%92%9F%E4%B9%90%E7%90%AA&x=6&y=9>Caixin.com</a> and the <i>Caixin Weekly</i> magazine.</p>
