--- a/leqizhong_portfolio/portfolio.html
+++ b/leqizhong_portfolio/portfolio.html
@@ -30,6 +30,18 @@
         </div>
 
         <div class="col-5">
+          <a href=https://oaklandnorth.net/2023/04/05/oakland-chinatown-burglaries/><img src="./assets/Chinatown.jpg" alt="Chinatown Lounge restaurant"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://oaklandnorth.net/2023/04/05/oakland-chinatown-burglaries/>Break-ins set Oakland Chinatown businesses back: ‘Things were slowly getting better, then all of a sudden the doom arrived.’</a></h2>
+          <h3>April 5, 2023</h3>
+          <p class="description">Oakland’s Chinatown has been striving to recover the business that was lost during the pandemic and the increase in anti-Asian hate crimes. The latest break-ins have dealt a severe blow to those efforts, leaving businesses and customers worried about being targeted and about the future of Chinatown.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href=https://oaklandnorth.net/2023/02/06/oakland-lantern-festival-chinatown-businesses/><img src="./assets/lantern.jpg" alt="sea of lantern at Chinatown, Oakland"></a>
         </div>
         <div class="col-7">
@@ -60,6 +72,18 @@
           <h2 class="hover"><a href=https://richmondconfidential.org/2022/12/03/richmond-verde-elementary-school-tree-planting/>‘It’s just a beautiful experience’: Community groups plant trees to make Verde school greener</a></h2>
           <h3>December 3, 2022</h3>
           <p class="description">For years, even on hot mornings and afternoons, Verde Elementary School students have spent heir recess and physical education periods on a cracked and sun-drenched blacktop — a wide open space with colored lines drawing volleyball courts and soccer fields, a running track along the edge.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
+          <a href=https://projects.journalism.berkeley.edu/radio/show/our-better-web-episode-2/><img src="./assets/ourbetterweb.jpg" alt="Our Better Web class photo"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://projects.journalism.berkeley.edu/radio/show/our-better-web-episode-2/>AUDIO: Facebook’s case against Section 230</a></h2>
+          <h3>November 10, 2022</h3>
+          <p class="description">Facebook – like most social media – benefits from the protections that Section 230 offers platforms online. So then why is it advocating for Section 230 reform? This is the second episode of a UC Berkeley cross campus initiative called “Our Better Web.” This episode continues to consider the impact that Section 230 has had on the internet as we know it today. Today’s stories look into content moderation, algorithmic discrimination, and the legislation that has attempted – and is attempting – to change Section 230.</p>
         </div>
         <div class="col-12">
           <div class=blank></div>
