--- a/leqizhong_portfolio/home.html
+++ b/leqizhong_portfolio/home.html
@@ -15,6 +15,7 @@
     <nav>
       <a class="awhite" href="home.html">Home</a>&nbsp&nbsp|&nbsp&nbsp
       <a class="awhite" href="portfolio.html">Portfolio</a>&nbsp&nbsp|&nbsp&nbsp
+      <a class="awhite" href=https://github.com/zhongleqi?tab=repositories>Data Analysis Projects</a>&nbsp&nbsp|&nbsp&nbsp
       <a class="awhite" href="resume.html">Resume</a>&nbsp&nbsp&nbsp&nbsp&nbsp
     </nav>
   </div>
