--- a/leqizhong_portfolio/energycharts.html
+++ b/leqizhong_portfolio/energycharts.html
@@ -17,6 +17,7 @@
       <span class="nav1">
         <a class="ablack" href="home.html">Home</a>&nbsp&nbsp|&nbsp&nbsp
         <a class="ablack" href="portfolio.html">Portfolio</a>&nbsp&nbsp|&nbsp&nbsp
+        <a class="ablack" href=https://github.com/zhongleqi?tab=repositories>Data Analysis Projects</a>&nbsp&nbsp|&nbsp&nbsp
         <a class="ablack" href="resume.html">Resume</a>&nbsp&nbsp&nbsp&nbsp&nbsp
       </span>
     </div>
