--- a/leqizhong_portfolio/portfolio.html
+++ b/leqizhong_portfolio/portfolio.html
@@ -72,7 +72,7 @@
         <div class="col-7">
           <h2 class="hover"><a href=https://richmondconfidential.org/2022/12/03/richmond-verde-elementary-school-tree-planting/>‘It’s just a beautiful experience’: Community groups plant trees to make Verde school greener</a></h2>
           <h3>December 3, 2022</h3>
-          <p class="description">For years, even on hot mornings and afternoons, Verde Elementary School students have spent heir recess and physical education periods on a cracked and sun-drenched blacktop — a wide open space with colored lines drawing volleyball courts and soccer fields, a running track along the edge.</p>
+          <p class="description">For years, even on hot mornings and afternoons, Verde Elementary School students have spent their recess and physical education periods on a cracked and sun-drenched blacktop — a wide open space with colored lines drawing volleyball courts and soccer fields, a running track along the edge.</p>
         </div>
         <div class="col-12">
           <div class=blank></div>
