Aging communication story updated
adding the CNN aging story to the portfolio.

--- a/leqizhong_portfolio/portfolio.html
+++ b/leqizhong_portfolio/portfolio.html
@@ -31,6 +31,18 @@
         </div>
 
         <div class="col-5">
+          <a href=https://www.cnn.com/2023/08/28/health/aging-parents-talk-wellness/index.html><img src="./assets/aging1.jpg" alt="Older adults doing pottery"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://www.cnn.com/2023/08/28/health/aging-parents-talk-wellness/index.html>Having an uncomfortable talk about aging early saves families from heartache and hard feelings</a></h2>
+          <h3>August 28, 2023</h3>
+          <p class="description">Among nearly 800,000 Americans surveyed in 150 studies, only 29% had completed a living will that detailed their care wishes, and only 33% had designated a health care power of attorney, according to a 2017 University of Pennsylvania study.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href=https://oaklandnorth.net/2023/04/05/oakland-chinatown-burglaries/><img src="./assets/Chinatown.jpg" alt="Chinatown Lounge restaurant"></a>
         </div>
         <div class="col-7">
