adding youtube story
update portfolio Oct. 14

--- a/leqizhong_portfolio/portfolio.html
+++ b/leqizhong_portfolio/portfolio.html
@@ -31,6 +31,18 @@
         </div>
 
         <div class="col-5">
+          <a href=https://www.dailydot.com/news/youtube-ad-blocker/><img src="./assets/youtube.jpg" alt="youtube ad blocker reminder"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://www.dailydot.com/news/youtube-ad-blocker/>‘Just use Safari and enjoy skipping ads’: YouTube’s crackdown on ad blockers sparks backlash</a></h2>
+          <h3>October 12, 2023</h3>
+          <p class="description">YouTube has declared war on ad blockers in recent months. Its efforts have led online users to revolt against the platform and look for ways to continue skipping ads. In its latest move, YouTube pauses the videos users are watching and displays a pop-up urging them to subscribe to YouTube Premium for $13.99 per month, disable ad blockers, or put the platform on the list of sites allowed to display ads.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href=https://www.dailydot.com/news/men-ghc-tech-conference/><img src="./assets/GHC1.jpg" alt="People lining up at the tech job fair"></a>
         </div>
         <div class="col-7">
