portfolio update Nov. 13

--- a/leqizhong_portfolio/portfolio.html
+++ b/leqizhong_portfolio/portfolio.html
@@ -31,6 +31,30 @@
         </div>
 
         <div class="col-5">
+          <a href=https://www.dailydot.com/news/shanghai-china-halloween-protest/><img src="./assets/halloween.jpg" alt="youngsters in halloween costumes"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://www.dailydot.com/news/shanghai-china-halloween-protest/>‘Who is frightened by our laughter?’: Young Chinese use Halloween costumes to protest the government at massive celebration in Shanghai</a></h2>
+          <h3>November 2, 2023</h3>
+          <p class="description">Thousands of Chinese people flooded Shanghai to celebrate Halloween this year. Social media users described it as the largest mass gathering since the protests against COVID restrictions at the end of 2022. Among the celebrities and cartoon characters, many costumes satirized various issues in China, such as Dabai, the notorious suits that were worn by medical personnel, community workers and police during the three-year lockdown.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
+          <a href=https://www.dailydot.com/news/meta-ai-llama/><img src="./assets/llama.jpg" alt="llama home page on Meta's website"></a>
+        </div>
+        <div class="col-7">
+          <h2 class="hover"><a href=https://www.dailydot.com/news/meta-ai-llama/>‘Llama 2 went on a rampage about political correctness’: Users say Meta’s AI is so ‘safe’ it won’t even call a woman beautiful</a></h2>
+          <h3>October 26, 2023</h3>
+          <p class="description">On Reddit in recent months, people have criticized Llama 2 for lecturing them about values, ethics, and issuing safety warnings. Posts on the platform claim that the AI refused prompts to list the ingredients of methamphetamine and Thermite, a combustible substance often used in welding. According to one user, it also declined to write a story with a sad ending because it might make readers feel bad.</p>
+        </div>
+        <div class="col-12">
+          <div class=blank></div>
+        </div>
+
+        <div class="col-5">
           <a href=https://www.dailydot.com/news/youtube-ad-blocker/><img src="./assets/youtube.jpg" alt="youtube ad blocker reminder"></a>
         </div>
         <div class="col-7">
